added ram clock outputs

--- a/vhdl/Controller.qsf
+++ b/vhdl/Controller.qsf
@@ -51,3 +51,56 @@ set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
+set_global_assignment -name MAX7000_DEVICE_IO_STANDARD TTL
+set_location_assignment PIN_12 -to AD_Data[0]
+set_location_assignment PIN_11 -to AD_Data[1]
+set_location_assignment PIN_10 -to AD_Data[2]
+set_location_assignment PIN_9 -to AD_Data[3]
+set_location_assignment PIN_8 -to AD_Data[4]
+set_location_assignment PIN_6 -to AD_Data[5]
+set_location_assignment PIN_5 -to AD_Data[6]
+set_location_assignment PIN_4 -to AD_Data[7]
+set_location_assignment PIN_15 -to AD_Clk
+set_location_assignment PIN_25 -to DA_Data[0]
+set_location_assignment PIN_24 -to DA_Data[1]
+set_location_assignment PIN_16 -to DA_Data[7]
+set_location_assignment PIN_17 -to DA_Data[6]
+set_location_assignment PIN_18 -to DA_Data[5]
+set_location_assignment PIN_20 -to DA_Data[4]
+set_location_assignment PIN_21 -to DA_Data[3]
+set_location_assignment PIN_22 -to DA_Data[2]
+set_location_assignment PIN_83 -to DA_Clk
+set_location_assignment PIN_83 -to Clk
+set_location_assignment PIN_52 -to Ram_Address[13]
+set_location_assignment PIN_67 -to Ram_Address[12]
+set_location_assignment PIN_54 -to Ram_Address[11]
+set_location_assignment PIN_60 -to Ram_Address[10]
+set_location_assignment PIN_58 -to Ram_Address[9]
+set_location_assignment PIN_57 -to Ram_Address[8]
+set_location_assignment PIN_56 -to Ram_Address[7]
+set_location_assignment PIN_55 -to Ram_Address[6]
+set_location_assignment PIN_61 -to Ram_Address[5]
+set_location_assignment PIN_63 -to Ram_Address[4]
+set_location_assignment PIN_64 -to Ram_Address[3]
+set_location_assignment PIN_65 -to Ram_Address[2]
+set_location_assignment PIN_68 -to Ram_Address[1]
+set_location_assignment PIN_69 -to Ram_Address[0]
+set_location_assignment PIN_73 -to Ram_CAS
+set_location_assignment PIN_51 -to Ram_CKE
+set_location_assignment PIN_50 -to Ram_Clk
+set_location_assignment PIN_44 -to Ram_Data[7]
+set_location_assignment PIN_45 -to Ram_Data[6]
+set_location_assignment PIN_46 -to Ram_Data[5]
+set_location_assignment PIN_48 -to Ram_Data[4]
+set_location_assignment PIN_75 -to Ram_Data[3]
+set_location_assignment PIN_76 -to Ram_Data[2]
+set_location_assignment PIN_77 -to Ram_Data[1]
+set_location_assignment PIN_79 -to Ram_Data[0]
+set_location_assignment PIN_70 -to Ram_RAS
+set_location_assignment PIN_74 -to Ram_WE
+set_location_assignment PIN_49 -to Ram_DQM
+set_location_assignment PIN_39 -to ResetN
+set_location_assignment PIN_62 -to TCK
+set_location_assignment PIN_14 -to TDI
+set_location_assignment PIN_71 -to TDO
+set_location_assignment PIN_23 -to TMS
