--- a/vhdl/controller.qsf
+++ b/vhdl/controller.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "MAX II"
 set_global_assignment -name DEVICE EPM240T100C5
-set_global_assignment -name TOP_LEVEL_ENTITY controller
+set_global_assignment -name TOP_LEVEL_ENTITY Top
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "01:40:33  OCTOBER 18, 2013"
 set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
@@ -57,8 +57,6 @@ set_location_assignment PIN_19 -to Led1
 set_location_assignment PIN_20 -to Led2
 set_location_assignment PIN_21 -to Led3
 set_location_assignment PIN_6 -to ResetN
-set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to ResetN
-set_instance_assignment -name GLOBAL_SIGNAL "GLOBAL CLOCK" -to Clk
 set_location_assignment PIN_36 -to AD_Clk
 set_location_assignment PIN_26 -to AD_Data[7]
 set_location_assignment PIN_27 -to AD_Data[6]
@@ -105,11 +103,35 @@ set_location_assignment PIN_3 -to Ram_Address[1]
 set_location_assignment PIN_2 -to Ram_Address[0]
 set_location_assignment PIN_51 -to btn1
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH test_controller -section_id eda_simulation
-set_global_assignment -name EDA_TEST_BENCH_NAME test_controller -section_id eda_simulation
-set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id test_controller
-set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "50 ms" -section_id test_controller
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME test_controller -section_id test_controller
-set_global_assignment -name EDA_TEST_BENCH_FILE simulation/modelsim/testbench.vhd -section_id test_controller
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH Top_vhd_tst -section_id eda_simulation
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "NO HEAT SINK WITH STILL AIR"
-set_location_assignment PIN_74 -to Ram_DQM
+set_location_assignment PIN_5 -to Ram_DQM
+set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to ResetN
+set_instance_assignment -name GLOBAL_SIGNAL "GLOBAL CLOCK" -to Clk
+set_global_assignment -name EDA_TEST_BENCH_NAME Top_vhd_tst -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id Top_vhd_tst
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME Top_vhd_tst -section_id Top_vhd_tst
+set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "2 ms" -section_id Top_vhd_tst
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbench.vhd -section_id Top_vhd_tst
+set_location_assignment PIN_67 -to Display_A[0]
+set_location_assignment PIN_66 -to Display_A[1]
+set_location_assignment PIN_64 -to Display_A[2]
+set_location_assignment PIN_74 -to Display_C[0]
+set_location_assignment PIN_73 -to Display_C[1]
+set_location_assignment PIN_68 -to Display_C[2]
+set_location_assignment PIN_69 -to Display_C[3]
+set_location_assignment PIN_72 -to Display_C[6]
+set_location_assignment PIN_71 -to Display_C[5]
+set_location_assignment PIN_70 -to Display_C[4]
+set_location_assignment PIN_53 -to Encoder_A
+set_location_assignment PIN_54 -to Encoder_B
+set_location_assignment PIN_51 -to Encoder_C
+set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to Encoder_A
+set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to Encoder_B
+set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to Encoder_C
+set_global_assignment -name VHDL_FILE Rotary_Encoder.vhd
+set_global_assignment -name VHDL_FILE Slow_Clock.vhd
+set_global_assignment -name VHDL_FILE Display.vhd
+set_global_assignment -name VHDL_FILE Counter.vhd
+set_global_assignment -name VHDL_FILE Top.vhd
+set_global_assignment -name SMART_RECOMPILE ON
